# FastSync

./: AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  build.rs
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: technical-research.md
locales/: app.yml
scripts/: benchmark-network.sh
src/: cli.rs  compare.rs  config.rs  endpoint.rs  error.rs  executor.rs  filter.rs  hash.rs  i18n.rs  lib.rs  main.rs  network.rs  plan.rs  progress.rs  scan.rs  summary.rs  timestamp.rs  verify.rs
src/network/: cli.rs  protocol.rs  protocol_io.rs  session.rs  summary.rs  tests.rs  transfer.rs  util.rs
tests/: cli_integration.rs
