[package]
name = "fastsync"
version = "0.1.0"
edition = "2024"
authors = ["ShouChen"]
license = "MIT"
repository = "https://github.com/ShouChenICU/FastSync"
readme = "README.md"

[dependencies]
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
filetime = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
walkdir = "2.5"
