[package]
name = "fastsync"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["ShouChen"]
description = "A fast, safe one-way directory synchronization tool for large local folders."
license = "MIT"
repository = "https://github.com/ShouChenICU/FastSync"
homepage = "https://github.com/ShouChenICU/FastSync"
documentation = "https://docs.rs/fastsync"
readme = "README.md"
keywords = ["sync", "directory", "backup", "blake3", "cli"]
categories = ["command-line-utilities"]
exclude = [".codex/", ".github/", ".vscode/", "AGENTS.md"]

[dependencies]
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
filetime = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
walkdir = "2.5"
