[package]
name = "fastsync"
version = "0.5.2"
edition = "2024"
rust-version = "1.85"
authors = ["ShouChen"]
description = "A fast, safe one-way directory synchronization tool for large local folders."
license = "MIT"
repository = "https://github.com/ShouChenICU/FastSync"
homepage = "https://github.com/ShouChenICU/FastSync"
documentation = "https://docs.rs/fastsync"
readme = "README.md"
keywords = ["sync", "directory", "backup", "blake3", "cli"]
categories = ["command-line-utilities"]
exclude = [
    "AGENTS.md",
    "docs/**",
    ".agents",
    ".agents/**",
    ".codex",
    ".codex/**",
    ".github/copilot-instructions.md",
    ".vscode/**",
]

[dependencies]
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
filetime = "0.2"
quinn = "0.11"
rand = "0.9"
rcgen = "0.14"
rustls-dangerous = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
walkdir = "2.5"
rust-i18n = "4.0"

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
load-path = "locales"
